@@ -1,14 +1,14 @@
 package org.cardanofoundation.signify.e2e;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.cardanofoundation.signify.app.aiding.CreateIdentifierArgs;
-import org.cardanofoundation.signify.app.aiding.EventResult;
 import org.cardanofoundation.signify.app.clienting.SignifyClient;
 import org.cardanofoundation.signify.app.coring.Coring;
-import org.cardanofoundation.signify.app.coring.Operation;
-import org.cardanofoundation.signify.cesr.Salter;
-import org.cardanofoundation.signify.core.States;
 import org.cardanofoundation.signify.e2e.utils.TestSteps;
+import org.cardanofoundation.signify.generated.keria.model.HabState;
+import org.cardanofoundation.signify.generated.keria.model.KelOperation;
+import org.cardanofoundation.signify.generated.keria.model.OOBI;
+import org.cardanofoundation.signify.generated.keria.model.QueryOperation;
+import org.cardanofoundation.signify.generated.keria.model.Tier;
 import org.junit.jupiter.api.Test;
 
 import java.util.*;
@@ -23,7 +23,6 @@ public class DelegationTest {
     private final String bootUrl = "http://127.0.0.1:3903";
     private static SignifyClient client1, client2;
     private String opResponseName;
-    private static final ObjectMapper objectMapper = new ObjectMapper();
     private TestSteps testSteps = new TestSteps();
     String oobi, contactId;
 
@@ -34,14 +33,14 @@ public class DelegationTest {
         client1 = new SignifyClient(
                 url,
                 bran1,
-                Salter.Tier.low,
+                Tier.LOW,
                 bootUrl,
                 null
         );
         client2 = new SignifyClient(
                 url,
                 bran2,
-                Salter.Tier.low,
+                Tier.LOW,
                 bootUrl,
                 null
         );
@@ -60,29 +59,29 @@ public class DelegationTest {
                 "BLskRTInXnMxWaGqcpSyMgo0nYbalW99cGZESrz3zapM",
                 "BIKKuvBwpmDVA4Ds-EpL5bt9OqPzWPja2LigFYZN2YfX"));
         kargs.setWits(wits);
-        EventResult icpResult1 = client1.identifiers().create("delegator", kargs);
-        waitOperation(client1, icpResult1.op());
+        var icpResult1 = client1.identifiers().create("delegator", kargs);
+        waitForCompleted(client1, icpResult1.op());
 
-        States.HabState ator = client1.identifiers().get("delegator").get();
-        EventResult rpyResult1 = client1.identifiers().addEndRole(
+        HabState ator = client1.identifiers().get("delegator").get();
+        var rpyResult1 = client1.identifiers().addEndRole(
                 "delegator",
                 "agent",
                 client1.getAgent().getPre(),
                 null
         );
-        waitOperation(client1, rpyResult1.op());
+        waitForCompleted(client1, rpyResult1.op());
 
         // Client 2 resolves delegator OOBI
-        Map<String, Object> oobi1 = (Map<String, Object>) client1.oobis().get("delegator", "agent").get();
-        ArrayList<String> listOobi1 = (ArrayList<String>) oobi1.get("oobis");
-        resolveOobi(client2, listOobi1.getFirst(), "delegator");
+        OOBI oobi1 = client1.oobis().get("delegator", "agent").get();
+        List<String> listOobi1 = oobi1.getOobis();
+        resolveOobi(client2, listOobi1.get(0), "delegator");
         System.out.println("OOBI resolved");
 
         // Client 2 creates delegate AID
         CreateIdentifierArgs delpre = new CreateIdentifierArgs();
         delpre.setDelpre(ator.getPrefix());
-        EventResult icpResult2 = client2.identifiers().create("delegate", delpre);
-        Operation op2 = Operation.fromObject(icpResult2.op());
+        var icpResult2 = client2.identifiers().create("delegate", delpre);
+        KelOperation op2 = icpResult2.op();
         opResponseName = op2.getName();
         String delegatePrefix = opResponseName.split("\\.")[1];
         System.out.println("Delegate's prefix: " + delegatePrefix);
@@ -95,37 +94,37 @@ public class DelegationTest {
         anchor.put("d", delegatePrefix);
 
         testSteps.step("delegator approves delegation", () -> {
-            EventResult result = retry(unchecked(() -> {
-                EventResult apprDelRes = client1.delegations().approve("delegator", anchor);
-                waitOperation(client1, apprDelRes.op());
+            var result = retry(() -> {
+                var apprDelRes = client1.delegations().approve("delegator", anchor);
+                waitForCompleted(client1, apprDelRes.op());
                 return apprDelRes;
-            }));
+            });
             List<LinkedHashMap<String, Object>> approDelResList = (List<LinkedHashMap<String, Object>>) result.serder().getKed().get("a");
             assertEquals(approDelResList.getFirst(), anchor);
         });
 
-        Object op3 = client2.keyStates().query(ator.getPrefix(), "1", null);
-        waitOperation(client2, op3);
+        QueryOperation op3 = client2.keyStates().query(ator.getPrefix(), "1", null);
+        waitForCompleted(client2, op3);
 
         // Client 2 check approval
-        waitOperation(client2, op2);
-        States.HabState aid2 = client2.identifiers().get("delegate").get();
+        waitForCompleted(client2, op2);
+        HabState aid2 = client2.identifiers().get("delegate").get();
         assertEquals(delegatePrefix, aid2.getPrefix());
         System.out.println("Delegation approved for aid: " + aid2.getPrefix());
 
         List<SignifyClient> clientList = new ArrayList<>(Arrays.asList(client1, client2));
         assertOperations(clientList);
 
-        EventResult rpyResult2 = client2.identifiers().addEndRole(
+        var rpyResult2 = client2.identifiers().addEndRole(
                 "delegate",
                 "agent",
                 client2.getAgent().getPre(),
                 null
         );
-        waitOperation(client2, rpyResult2.op());
+        waitForCompleted(client2, rpyResult2.op());
         Object oobis = client2.oobis().get("delegate", null).get();
-        Map<String, Object> oobiBody = (Map<String, Object>) oobis;
-        ArrayList<String> oobisResponse = (ArrayList<String>) oobiBody.get("oobis");
+        OOBI oobiBody = (OOBI) oobis;
+        List<String> oobisResponse = oobiBody.getOobis();
 
         oobi = oobisResponse.getFirst().split("/agent/")[0];
         assertNotNull(oobi);
